Refactor SVM Speech/Music Classifier to use PyTorch: - Implemented SVM from scratch using PyTorch, removing sklearn dependencies. - Updated installation requirements to include torch instead of scikit-learn. - Added custom functions for train/test splitting, accuracy scoring, confusion matrix, and classification report. - Adjusted baseline training and evaluation to utilize the new TorchSVMPipeline. - Enhanced comments and documentation for clarity.

--- a/svm_speech_music_filter_skip.ipynb
+++ b/svm_speech_music_filter_skip.ipynb
@@ -5,14 +5,13 @@
    "id": "cee071f3",
    "metadata": {},
    "source": [
-    "\n",
     "# SVM-based Speech/Music Classifier + Efficient Implementation (Filtering & Skipping)\n",
     "\n",
     "**Paper implemented:** *Efficient implementation techniques of an SVM-based speech/music classifier in SMV* (Lim & Chang, 2015)\n",
     "\n",
     "این نوت‌بوک سه بخش اصلی را پیاده‌سازی می‌کند:\n",
     "\n",
-    "1) **Baseline**: آموزش و ارزیابی یک **SVM با کرنل RBF** برای تفکیک Speech vs Music روی فریم‌های صوتی  \n",
+    "1) **Baseline**: آموزش و ارزیابی یک **SVM از صفر با PyTorch (بدون sklearn)** برای تفکیک Speech vs Music روی فریم‌های صوتی  \n",
     "2) **Filtering (Hierarchical)**: یک **فیلتر ساده** که بخشی از فریم‌ها را بدون اجرای SVM به‌عنوان *music* تشخیص می‌دهد  \n",
     "3) **Skipping**: با تکیه بر **همبستگی بین فریم‌های متوالی**، اجرای SVM برای تعدادی از فریم‌های بعدی *skip* می‌شود  \n",
     "4) **Combined**: ترکیب Filtering → Skipping (همان ایده‌ی فلوچارت مقاله)\n",
@@ -25,7 +24,7 @@
     "\n",
     "## پیش‌نیازها\n",
     "- فایل‌های صوتی Speech و Music (wav/mp3/…)\n",
-    "- نصب کتابخانه‌ها: `numpy, scipy, scikit-learn, librosa, soundfile, matplotlib`\n",
+    "- نصب کتابخانه‌ها: `numpy, scipy, torch, librosa, soundfile, matplotlib`\n",
     "\n",
     "ساختار پیشنهادی دیتا:\n",
     "```\n",
@@ -36,29 +35,29 @@
     "  music/\n",
     "    m1.wav\n",
     "    m2.wav\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "---\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "d39cfb2f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# اگر لازم بود (روی conda env شما)، این‌ها را نصب کنید:\n",
-    "#!pip -q install numpy scipy scikit-learn librosa soundfile matplotlib\n"
+    "!pip -q install numpy scipy torch librosa soundfile matplotlib\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "id": "4325a03f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import os\n",
     "import glob\n",
     "import time\n",
@@ -70,11 +69,8 @@
     "from dataclasses import dataclass\n",
     "from typing import List, Tuple, Dict, Optional\n",
     "\n",
-    "from sklearn.model_selection import GroupShuffleSplit\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
+    "import torch\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
     "\n",
     "import matplotlib.pyplot as plt\n"
    ]
@@ -93,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "id": "ace39210",
    "metadata": {},
    "outputs": [],
@@ -126,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "id": "a76dcb9c",
    "metadata": {},
    "outputs": [
@@ -182,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "id": "4348af9b",
    "metadata": {},
    "outputs": [],
@@ -327,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "7d11a551",
    "metadata": {},
    "outputs": [],
@@ -367,9 +363,10 @@
    "id": "2d424a7e",
    "metadata": {},
    "source": [
+    "## 5) آموزش Baseline SVM از صفر (PyTorch)\n",
     "\n",
-    "## 5) آموزش Baseline SVM (RBF)\n",
-    "مقاله از RBF استفاده کرده و gamma را 0.01 گذاشته است. اینجا هم همین کار را می‌کنیم.\n"
+    "در مقاله از RBF استفاده شده است. اینجا هم از یک **SVM مبتنی بر hinge-loss** استفاده می‌کنیم که\n",
+    "کرنل RBF را با **Random Fourier Features** تقریب می‌زند (بدون sklearn).\n"
    ]
   },
   {
@@ -377,34 +374,273 @@
    "execution_count": null,
    "id": "c4a70c04",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "دیتای کافی ندارید. حداقل چند فایل speech و چند فایل music داخل data/ بگذارید.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mRuntimeError\u001b[39m                              Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(np.unique(y)) < \u001b[32m2\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(y) < \u001b[32m10\u001b[39m:\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mدیتای کافی ندارید. حداقل چند فایل speech و چند فایل music داخل data/ بگذارید.\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      4\u001b[39m gss = GroupShuffleSplit(n_splits=\u001b[32m1\u001b[39m, test_size=\u001b[32m0.25\u001b[39m, random_state=\u001b[32m42\u001b[39m)\n\u001b[32m      5\u001b[39m train_idx, test_idx = \u001b[38;5;28mnext\u001b[39m(gss.split(X, y, groups=groups))\n",
-      "\u001b[31mRuntimeError\u001b[39m: دیتای کافی ندارید. حداقل چند فایل speech و چند فایل music داخل data/ بگذارید."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# -----------------------------\n",
+    "# Utilities (no sklearn)\n",
+    "# -----------------------------\n",
+    "def group_train_test_split(\n",
+    "    X: np.ndarray,\n",
+    "    y: np.ndarray,\n",
+    "    groups: List[str],\n",
+    "    test_size: float = 0.25,\n",
+    "    random_state: int = 42,\n",
+    "    max_tries: int = 200,\n",
+    "):\n",
+    "    g = np.asarray(groups)\n",
+    "    unique_groups = np.unique(g)\n",
+    "    if len(unique_groups) < 2:\n",
+    "        raise RuntimeError(\"تعداد فایل‌ها برای group split کافی نیست.\")\n",
     "\n",
+    "    n_test = int(round(test_size * len(unique_groups)))\n",
+    "    n_test = max(1, min(len(unique_groups) - 1, n_test))\n",
+    "\n",
+    "    rng = np.random.default_rng(random_state)\n",
+    "\n",
+    "    for _ in range(max_tries):\n",
+    "        perm = rng.permutation(unique_groups)\n",
+    "        test_groups = set(perm[:n_test].tolist())\n",
+    "\n",
+    "        test_mask = np.array([gi in test_groups for gi in g], dtype=bool)\n",
+    "        train_idx = np.where(~test_mask)[0]\n",
+    "        test_idx = np.where(test_mask)[0]\n",
+    "\n",
+    "        if len(train_idx) == 0 or len(test_idx) == 0:\n",
+    "            continue\n",
+    "\n",
+    "        if len(np.unique(y[train_idx])) < 2:\n",
+    "            continue\n",
+    "        if len(np.unique(y[test_idx])) < 2:\n",
+    "            continue\n",
+    "\n",
+    "        return train_idx, test_idx\n",
+    "\n",
+    "    raise RuntimeError(\"نتوانستم split متعادلی پیدا کنم. تعداد فایل‌های speech/music را بیشتر کنید.\")\n",
+    "\n",
+    "\n",
+    "def accuracy_score(y_true: np.ndarray, y_pred: np.ndarray) -> float:\n",
+    "    y_true = np.asarray(y_true)\n",
+    "    y_pred = np.asarray(y_pred)\n",
+    "    if y_true.size == 0:\n",
+    "        return 0.0\n",
+    "    return float(np.mean(y_true == y_pred))\n",
+    "\n",
+    "\n",
+    "def confusion_matrix(y_true: np.ndarray, y_pred: np.ndarray, labels: List[int]):\n",
+    "    y_true = np.asarray(y_true)\n",
+    "    y_pred = np.asarray(y_pred)\n",
+    "    cm = np.zeros((len(labels), len(labels)), dtype=np.int64)\n",
+    "    for i, lt in enumerate(labels):\n",
+    "        for j, lp in enumerate(labels):\n",
+    "            cm[i, j] = int(np.sum((y_true == lt) & (y_pred == lp)))\n",
+    "    return cm\n",
+    "\n",
+    "\n",
+    "def classification_report(\n",
+    "    y_true: np.ndarray,\n",
+    "    y_pred: np.ndarray,\n",
+    "    target_names: List[str],\n",
+    "    labels: Optional[List[int]] = None,\n",
+    ") -> str:\n",
+    "    y_true = np.asarray(y_true)\n",
+    "    y_pred = np.asarray(y_pred)\n",
+    "\n",
+    "    if labels is None:\n",
+    "        labels = sorted(np.unique(np.concatenate([y_true, y_pred])).tolist())\n",
+    "\n",
+    "    header = f\"{'class':<16}{'precision':>10}{'recall':>10}{'f1-score':>10}{'support':>10}\"\n",
+    "    lines = [header, \"-\" * len(header)]\n",
+    "\n",
+    "    macro_p, macro_r, macro_f = 0.0, 0.0, 0.0\n",
+    "    total_support = 0\n",
+    "\n",
+    "    for lbl, name in zip(labels, target_names):\n",
+    "        tp = np.sum((y_true == lbl) & (y_pred == lbl))\n",
+    "        fp = np.sum((y_true != lbl) & (y_pred == lbl))\n",
+    "        fn = np.sum((y_true == lbl) & (y_pred != lbl))\n",
+    "        support = int(np.sum(y_true == lbl))\n",
+    "\n",
+    "        p = float(tp / (tp + fp + 1e-12))\n",
+    "        r = float(tp / (tp + fn + 1e-12))\n",
+    "        f1 = float(2 * p * r / (p + r + 1e-12))\n",
+    "\n",
+    "        lines.append(f\"{name:<16}{p:>10.3f}{r:>10.3f}{f1:>10.3f}{support:>10d}\")\n",
+    "\n",
+    "        macro_p += p\n",
+    "        macro_r += r\n",
+    "        macro_f += f1\n",
+    "        total_support += support\n",
+    "\n",
+    "    n_cls = max(len(labels), 1)\n",
+    "    lines.append(\"-\" * len(header))\n",
+    "    lines.append(f\"{'macro avg':<16}{macro_p/n_cls:>10.3f}{macro_r/n_cls:>10.3f}{macro_f/n_cls:>10.3f}{total_support:>10d}\")\n",
+    "    lines.append(f\"{'accuracy':<16}{'':>10}{'':>10}{accuracy_score(y_true, y_pred):>10.3f}{total_support:>10d}\")\n",
+    "    return \"\\n\".join(lines)\n",
+    "\n",
+    "\n",
+    "# -----------------------------\n",
+    "# PyTorch SVM from scratch\n",
+    "# -----------------------------\n",
+    "class StandardScalerScratch:\n",
+    "    def __init__(self, eps: float = 1e-8):\n",
+    "        self.eps = eps\n",
+    "        self.mean_ = None\n",
+    "        self.scale_ = None\n",
+    "\n",
+    "    def fit(self, X: np.ndarray):\n",
+    "        X = np.asarray(X, dtype=np.float32)\n",
+    "        self.mean_ = X.mean(axis=0, keepdims=True)\n",
+    "        self.scale_ = X.std(axis=0, keepdims=True)\n",
+    "        self.scale_[self.scale_ < self.eps] = 1.0\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, X: np.ndarray) -> np.ndarray:\n",
+    "        X = np.asarray(X, dtype=np.float32)\n",
+    "        return (X - self.mean_) / self.scale_\n",
+    "\n",
+    "    def fit_transform(self, X: np.ndarray) -> np.ndarray:\n",
+    "        return self.fit(X).transform(X)\n",
+    "\n",
+    "\n",
+    "class TorchRBFSVMScratch:\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        gamma: float = 0.01,\n",
+    "        C: float = 1.0,\n",
+    "        n_rff: int = 512,\n",
+    "        lr: float = 3e-3,\n",
+    "        epochs: int = 25,\n",
+    "        batch_size: int = 2048,\n",
+    "        random_state: int = 42,\n",
+    "        device: Optional[str] = None,\n",
+    "        verbose: bool = True,\n",
+    "    ):\n",
+    "        self.gamma = gamma\n",
+    "        self.C = C\n",
+    "        self.n_rff = n_rff\n",
+    "        self.lr = lr\n",
+    "        self.epochs = epochs\n",
+    "        self.batch_size = batch_size\n",
+    "        self.random_state = random_state\n",
+    "        self.device = device or (\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "        self.verbose = verbose\n",
+    "\n",
+    "        self.rff_w_ = None\n",
+    "        self.rff_b_ = None\n",
+    "        self.rff_scale_ = np.sqrt(2.0 / self.n_rff)\n",
+    "        self.w_ = None\n",
+    "        self.b0_ = 0.0\n",
+    "\n",
+    "    def _rff_numpy(self, X: np.ndarray) -> np.ndarray:\n",
+    "        return self.rff_scale_ * np.cos(X @ self.rff_w_ + self.rff_b_)\n",
+    "\n",
+    "    def fit(self, X: np.ndarray, y: np.ndarray):\n",
+    "        X = np.asarray(X, dtype=np.float32)\n",
+    "        y = np.asarray(y, dtype=np.float32)\n",
+    "\n",
+    "        labels = set(np.unique(y).tolist())\n",
+    "        if not labels.issubset({-1.0, 1.0}):\n",
+    "            raise ValueError(\"y باید فقط شامل -1 و +1 باشد.\")\n",
+    "\n",
+    "        n_samples, n_features = X.shape\n",
+    "        if n_samples == 0:\n",
+    "            raise ValueError(\"X خالی است.\")\n",
+    "\n",
+    "        rng = np.random.default_rng(self.random_state)\n",
+    "        self.rff_w_ = rng.normal(\n",
+    "            loc=0.0,\n",
+    "            scale=np.sqrt(2.0 * self.gamma),\n",
+    "            size=(n_features, self.n_rff),\n",
+    "        ).astype(np.float32)\n",
+    "        self.rff_b_ = rng.uniform(0.0, 2.0 * np.pi, size=(self.n_rff,)).astype(np.float32)\n",
+    "\n",
+    "        x_tensor = torch.from_numpy(X)\n",
+    "        y_tensor = torch.from_numpy(y)\n",
+    "        loader = DataLoader(\n",
+    "            TensorDataset(x_tensor, y_tensor),\n",
+    "            batch_size=min(self.batch_size, n_samples),\n",
+    "            shuffle=True,\n",
+    "        )\n",
+    "\n",
+    "        rff_w_t = torch.from_numpy(self.rff_w_).to(self.device)\n",
+    "        rff_b_t = torch.from_numpy(self.rff_b_).to(self.device)\n",
+    "\n",
+    "        w = torch.zeros(self.n_rff, dtype=torch.float32, device=self.device, requires_grad=True)\n",
+    "        b0 = torch.zeros(1, dtype=torch.float32, device=self.device, requires_grad=True)\n",
+    "\n",
+    "        opt = torch.optim.Adam([w, b0], lr=self.lr)\n",
+    "\n",
+    "        for ep in range(self.epochs):\n",
+    "            total_loss = 0.0\n",
+    "            for xb, yb in loader:\n",
+    "                xb = xb.to(self.device)\n",
+    "                yb = yb.to(self.device)\n",
+    "\n",
+    "                z = self.rff_scale_ * torch.cos(xb @ rff_w_t + rff_b_t)\n",
+    "                scores = z @ w + b0\n",
+    "\n",
+    "                hinge = torch.clamp(1.0 - yb * scores, min=0.0)\n",
+    "                loss = 0.5 * torch.sum(w * w) + self.C * torch.mean(hinge)\n",
+    "\n",
+    "                opt.zero_grad()\n",
+    "                loss.backward()\n",
+    "                opt.step()\n",
+    "\n",
+    "                total_loss += float(loss.detach().cpu())\n",
+    "\n",
+    "            if self.verbose and ((ep + 1) % 5 == 0 or ep == 0 or ep == self.epochs - 1):\n",
+    "                print(f\"Epoch {ep+1:02d}/{self.epochs} - loss: {total_loss / len(loader):.5f}\")\n",
+    "\n",
+    "        self.w_ = w.detach().cpu().numpy().astype(np.float32)\n",
+    "        self.b0_ = float(b0.detach().cpu().item())\n",
+    "        return self\n",
+    "\n",
+    "    def decision_function(self, X: np.ndarray) -> np.ndarray:\n",
+    "        X = np.asarray(X, dtype=np.float32)\n",
+    "        z = self._rff_numpy(X)\n",
+    "        return z @ self.w_ + self.b0_\n",
+    "\n",
+    "    def predict(self, X: np.ndarray) -> np.ndarray:\n",
+    "        scores = self.decision_function(X)\n",
+    "        return np.where(scores >= 0.0, LABEL_SPEECH, LABEL_MUSIC).astype(np.int32)\n",
+    "\n",
+    "\n",
+    "class TorchSVMPipeline:\n",
+    "    def __init__(self, **svm_kwargs):\n",
+    "        self.scaler = StandardScalerScratch()\n",
+    "        self.svm = TorchRBFSVMScratch(**svm_kwargs)\n",
+    "\n",
+    "    def fit(self, X: np.ndarray, y: np.ndarray):\n",
+    "        Xs = self.scaler.fit_transform(X)\n",
+    "        self.svm.fit(Xs, y)\n",
+    "        return self\n",
+    "\n",
+    "    def predict(self, X: np.ndarray) -> np.ndarray:\n",
+    "        Xs = self.scaler.transform(X)\n",
+    "        return self.svm.predict(Xs)\n",
+    "\n",
+    "\n",
+    "# -----------------------------\n",
+    "# Train / Evaluate baseline\n",
+    "# -----------------------------\n",
     "if len(np.unique(y)) < 2 or len(y) < 10:\n",
     "    raise RuntimeError(f\"دیتای کافی ندارید. حداقل چند فایل speech و music داخل '{DATA_DIR}/' بگذارید.\")\n",
     "\n",
-    "gss = GroupShuffleSplit(n_splits=1, test_size=0.25, random_state=42)\n",
-    "train_idx, test_idx = next(gss.split(X, y, groups=groups))\n",
+    "train_idx, test_idx = group_train_test_split(X, y, groups=groups, test_size=0.25, random_state=42)\n",
     "\n",
     "X_train, X_test = X[train_idx], X[test_idx]\n",
     "y_train, y_test = y[train_idx], y[test_idx]\n",
     "\n",
-    "baseline = Pipeline([\n",
-    "    (\"scaler\", StandardScaler()),\n",
-    "    (\"svm\", SVC(kernel=\"rbf\", gamma=0.01, C=1.0))\n",
-    "])\n",
+    "baseline = TorchSVMPipeline(\n",
+    "    gamma=0.01,\n",
+    "    C=1.0,\n",
+    "    n_rff=512,\n",
+    "    lr=3e-3,\n",
+    "    epochs=25,\n",
+    "    batch_size=2048,\n",
+    "    random_state=42,\n",
+    "    verbose=True,\n",
+    ")\n",
     "\n",
     "t0 = time.perf_counter()\n",
     "baseline.fit(X_train, y_train)\n",
@@ -416,7 +652,12 @@
     "print(\"Baseline accuracy:\", accuracy_score(y_test, y_pred))\n",
     "print(\"Confusion matrix [speech(+1), music(-1)]:\")\n",
     "print(confusion_matrix(y_test, y_pred, labels=[LABEL_SPEECH, LABEL_MUSIC]))\n",
-    "print(classification_report(y_test, y_pred, target_names=[\"speech(+1)\",\"music(-1)\"]))\n"
+    "print(classification_report(\n",
+    "    y_test,\n",
+    "    y_pred,\n",
+    "    labels=[LABEL_SPEECH, LABEL_MUSIC],\n",
+    "    target_names=[\"speech(+1)\", \"music(-1)\"]\n",
+    "))\n"
    ]
   },
   {
